--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+dj-database-url==0.5.0
 Django==2.2.5
 django-crontab==0.7.1
+django-heroku==0.3.1
 gunicorn==20.0.0
 Pillow==6.1.0
+pkg-resources==0.0.0
 psycopg2==2.8.3
 pytz==2019.2
 sqlparse==0.3.0
+whitenoise==4.1.4
